# PCB_Inspect

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
src/config/: settings.py
src/model/: predictor.py
src/utils/: file_handler.py
static/: main.js  style.css
templates/: index.html
test/dataset/labels/: train.cache  val.cache
test/dataset/labels/test/: 01_mouse_bite_17.txt  01_spur_06.txt  01_spur_07.txt  01_spur_18.txt  04_mouse_bite_02.txt  04_spur_01.txt  04_spur_17.txt  05_spur_07.txt  06_mouse_bite_04.txt  07_mouse_bite_05.txt  10_spur_01.txt  11_spur_06.txt  12_mouse_bite_05.txt
test/dataset/labels/train/: 01_mouse_bite_01.txt  01_mouse_bite_02.txt  01_mouse_bite_03.txt  01_mouse_bite_04.txt  01_mouse_bite_06.txt  01_mouse_bite_07.txt  01_mouse_bite_08.txt  01_mouse_bite_11.txt  01_mouse_bite_13.txt  01_mouse_bite_14.txt  01_mouse_bite_15.txt  01_mouse_bite_18.txt  01_mouse_bite_19.txt  01_mouse_bite_20.txt  01_spur_01.txt  01_spur_02.txt  01_spur_03.txt  01_spur_04.txt  01_spur_05.txt  01_spur_08.txt  01_spur_09.txt  01_spur_11.txt  01_spur_12.txt  01_spur_15.txt  01_spur_17.txt  01_spur_20.txt  04_mouse_bite_03.txt  04_mouse_bite_04.txt  04_mouse_bite_05.txt  04_mouse_bite_06.txt  04_mouse_bite_07.txt  04_mouse_bite_08.txt  04_mouse_bite_09.txt  04_mouse_bite_10.txt  04_mouse_bite_11.txt  04_mouse_bite_12.txt  04_mouse_bite_15.txt  04_mouse_bite_17.txt  04_mouse_bite_18.txt  04_mouse_bite_19.txt  (+132 more)
test/dataset/labels/val/: 01_mouse_bite_05.txt  01_mouse_bite_09.txt  01_mouse_bite_10.txt  01_mouse_bite_12.txt  01_mouse_bite_16.txt  (+40 more)
